<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/outer_padding"
    tools:context=".signin.SignInActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/sign_in_app_icon_padding"
        android:src="@drawable/ic_face_black_48dp"/>

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/sign_in_text_view_padding_top"
        android:text="@string/sign_in"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/account_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:padding="@dimen/edit_text_padding">

        <EditText
            android:id="@+id/account_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_id"
        android:paddingBottom="@dimen/edit_text_padding"
        android:paddingLeft="@dimen/edit_text_padding"
        android:paddingRight="@dimen/edit_text_padding">

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/not_registered_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/not_registered_text_view_padding"
        android:text="@string/not_registered"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/not_registered_text_view"
        android:layout_marginTop="@dimen/not_registered_text_view_padding"
        android:text="@string/sign_in"/>

</RelativeLayout>
